--- a/logging/es-statefulset.yaml
+++ b/logging/es-statefulset.yaml
@@ -3,14 +3,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: logging
   labels:
     k8s-app: elasticsearch-logging
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
 ---
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: elasticsearch-logging
   labels:
@@ -30,7 +30,7 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  namespace: kube-system
+  namespace: logging
   name: elasticsearch-logging
   labels:
     k8s-app: elasticsearch-logging
@@ -39,7 +39,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: logging
   apiGroup: ""
 roleRef:
   kind: ClusterRole
@@ -51,7 +51,7 @@ apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: logging
   labels:
     k8s-app: elasticsearch-logging
     version: v5.5.1
@@ -73,15 +73,16 @@ spec:
     spec:
       serviceAccountName: elasticsearch-logging
       containers:
-      - image: gcr.io/google-containers/elasticsearch:v5.5.1-1
+     # - image: gcr.io/google-containers/elasticsearch:v6.4.2
+      - image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4 
         name: elasticsearch-logging
         resources:
           # need more cpu upon initialization, therefore burstable class
           limits:
             cpu: 1000m
-            memory: 2.5Gi
+            memory: 2.0Gi
           requests:
-            memory: 2.5Gi
+            memory: 2.0Gi
             cpu: 100m
         ports:
         - containerPort: 9200
