--- a/logging/kibana-deployment.yaml
+++ b/logging/kibana-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: kibana-logging
-  namespace: kube-system
+  namespace: logging
   labels:
     k8s-app: kibana-logging
     kubernetes.io/cluster-service: "true"
@@ -24,25 +24,25 @@ spec:
         # image: docker.elastic.co/kibana/kibana:5.5.1
 
         # image with logtrail
-        image: wardviaene/kibana-logtrail:5.5.1
+        image: aslaen/kibana-logtrail
         resources:
           # need more cpu upon initialization, therefore burstable class
           limits:
             cpu: 1000m
-            memory: 2.5Gi
+            memory: 2.0Gi
           requests:
             cpu: 100m
-            memory: 2.5Gi
+            memory: 2.0Gi
         env:
           - name: ELASTICSEARCH_URL
             value: http://elasticsearch-logging:9200
           # use this if you want to use proxy
           #- name: SERVER_BASEPATH
           #  value: /api/v1/proxy/namespaces/kube-system/services/kibana-logging
-          - name: XPACK_MONITORING_ENABLED
-            value: "false"
-          - name: XPACK_SECURITY_ENABLED
-            value: "false"
+          #- name: XPACK_MONITORING_ENABLED
+          #  value: "false"
+          #- name: XPACK_SECURITY_ENABLED
+          #  value: "false"
         ports:
         - containerPort: 5601
           name: ui
